# zai-chat-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: basic_usage.py  chat_modes_and_history.py  open_regenerate_and_delete.py
zai_chat_client/: __init__.py  chat_message.py  chat_session.py  client.py  exceptions.py  selectors.py  types.py
zai_chat_client/core/: __init__.py  chat_urls.py  cookies.py  logger.py  session_store.py
